--- a/index.html
+++ b/index.html
@@ -8,28 +8,72 @@
   </head>
   <body class="card-theme-classic background-classic">
     <header>
-      <h1>Klondike Solitaire</h1>
-      <div class="controls">
+      <div class="header-top">
+        <h1>Klondike Solitaire</h1>
         <button id="new-game" type="button">New Game</button>
-        <span id="status" role="status" aria-live="polite"></span>
-        <label class="design-select" for="card-design">
-          <span>Card design</span>
-          <select id="card-design" name="card-design">
-            <option value="classic" selected>Classic</option>
-            <option value="vintage">Vintage</option>
-            <option value="midnight">Midnight</option>
-          </select>
-        </label>
-        <label class="design-select" for="background-design">
-          <span>Background</span>
-          <select id="background-design" name="background-design">
-            <option value="classic" selected>Celestial</option>
-            <option value="forest">Forest Felt</option>
-            <option value="deepsea">Deep Sea</option>
-          </select>
-        </label>
+      </div>
+      <div class="controls">
+        <div class="appearance-controls" role="group" aria-label="Appearance options">
+          <label class="design-select" for="card-design">
+            <span>Card design</span>
+            <select id="card-design" name="card-design">
+              <option value="classic" selected>Classic</option>
+              <option value="vintage">Vintage</option>
+              <option value="midnight">Midnight</option>
+            </select>
+          </label>
+          <label class="design-select" for="background-design">
+            <span>Background</span>
+            <select id="background-design" name="background-design">
+              <option value="classic" selected>Celestial</option>
+              <option value="forest">Forest Felt</option>
+              <option value="deepsea">Deep Sea</option>
+            </select>
+          </label>
+        </div>
+        <div class="status-line">
+          <span id="status" role="status" aria-live="polite"></span>
+        </div>
       </div>
     </header>
+    <section class="info-bar" aria-live="polite" role="group" aria-label="Game statistics">
+      <div
+        class="info-item"
+        tabindex="0"
+        data-tooltip="Cards remaining in the stock pile. Draw from here when you run out of moves on the tableau."
+        aria-label="Stock pile cards remaining"
+      >
+        <span class="info-label">Stock</span>
+        <span class="info-value" id="stock-count">0</span>
+      </div>
+      <div
+        class="info-item"
+        tabindex="0"
+        data-tooltip="Face-up cards available to play. Waste grows as you draw from the stock."
+        aria-label="Waste pile cards available"
+      >
+        <span class="info-label">Waste</span>
+        <span class="info-value" id="waste-count">0</span>
+      </div>
+      <div
+        class="info-item"
+        tabindex="0"
+        data-tooltip="Total cards moved into the foundations. Fill all 52 to win."
+        aria-label="Foundation cards placed"
+      >
+        <span class="info-label">Foundations</span>
+        <span class="info-value" id="foundation-count">0/52</span>
+      </div>
+      <div
+        class="info-item"
+        tabindex="0"
+        data-tooltip="Every successful card movement increases your move count."
+        aria-label="Total moves made"
+      >
+        <span class="info-label">Moves</span>
+        <span class="info-value" id="move-count">0</span>
+      </div>
+    </section>
     <main>
       <section class="top-row">
         <div class="pile stock" data-pile="stock" aria-label="Stock"></div>
