feat: surface hand metadata in dashboard

--- a/index.html
+++ b/index.html
@@ -87,6 +87,24 @@
             <span class="info-label">Moves</span>
             <span class="info-value" id="move-count">0</span>
           </div>
+          <div
+            class="info-item"
+            tabindex="0"
+            data-tooltip="Identifier for the current deal. Use this when sharing notable hands."
+            aria-label="Active hand tag"
+          >
+            <span class="info-label">Hand Tag</span>
+            <span class="info-value" id="hand-tag-value">—</span>
+          </div>
+          <div
+            class="info-item"
+            tabindex="0"
+            data-tooltip="Seed value used when shuffling the deck. Reuse it to replay the same layout."
+            aria-label="Shuffle seed value"
+          >
+            <span class="info-label">Seed</span>
+            <span class="info-value" id="seed-value">—</span>
+          </div>
         </section>
       </section>
       <section class="game-area" aria-labelledby="game-area-title" role="application">
