Add CSV export workflow for staged attempts

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
           <p>Choose a look you like and start a fresh shuffle whenever you are ready.</p>
         </div>
         <div class="controls-panel">
-          <button id="new-game" type="button">New Game</button>
+          <div class="controls-actions">
+            <button id="new-game" type="button">New Game</button>
+            <button id="export-attempts" type="button" disabled>
+              Export Attempts
+            </button>
+          </div>
           <div class="appearance-controls" role="group" aria-label="Appearance options">
             <label class="design-select" for="card-design">
               <span>Card design</span>
